[gd_scene load_steps=3 format=2]

[ext_resource path="res://Dialogue/Triggers/DialogueAreaTrigger.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 48.1539, 55.6514 )

[node name="DialogueAreaTrigger" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="PlayerTarget" type="Node2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_DialogueAreaTrigger_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_DialogueAreaTrigger_body_exited"]
